# aura-poc-llm

./: .gitignore  AI_PROMPTS.md  README.md
docs/: A1_problem_framing.md  A2_system_architecture.md  A3_data_model.md  A4_prompt_design.md  B1_rag_design.md  C1_cost_control.md  C2_output_evaluation.md  E_execution_reality_check.md  scoring_flow.md
infra/: .dockerignore  .env.example  Dockerfile  docker-compose.yml
src/backend/: pyproject.toml  requirements.txt
src/backend/app/: main.py
src/backend/app/api/: routes.py
src/backend/app/core/: auth.py  config.py  database.py
src/backend/app/models/: orm.py  schemas.py
src/backend/app/prompts/: resume_screening.py
src/backend/app/services/: cache_service.py  embedding_service.py  llm_service.py  pdf_service.py  screening_service.py  vector_service.py
src/backend/scripts/: init_db.py  seed_data.py
src/backend/tests/: test_prompts.py  test_schemas.py  test_tenant_isolation.py
